syntax = "proto3";

package io.linkerd.proxy.net;

option go_package = "github.com/linkerd/linkerd2-proxy-api/go/net";

message IPAddress {
  oneof ip {
    fixed32 ipv4 = 1;
    IPv6 ipv6 = 2;
  }
}

message IPNetwork {
  IPAddress ip = 1;
  uint32 prefix_len = 2;
}

message IPv6 {
  fixed64 first = 1; // hextets 1-4
  fixed64 last = 2;  // hextets 5-8
}

message TcpAddress {
  IPAddress ip = 1;
  uint32 port = 2;
}
